Added additional sections
Added 2 sections to the home page.

--- a/Index.css
+++ b/Index.css
@@ -7,7 +7,14 @@
 }
 
 body {
+    background: url(https://i.kym-cdn.com/entries/icons/mobile/000/034/772/Untitled-1.jpg) no-repeat center fixed;
+    background-size: cover;
+    text-align: center;
+}
+
+body/ {
     background-color: lavender;
+    text-align: center;
 }
 
 .spacing {
@@ -16,6 +23,27 @@ body {
     width: 100%;
 }
 
-#section-1 {
+.spacing-2 {
+    margin-top: 50px;
+    display: inline-block;
+    width: 100%;
+}
+
+#section-1,
+#section-2 {
     text-align: center;
+    color: white;
+}
+
+.cat-list {
+    text-align: left;
+    color: white;
+}
+
+.default-img-prop {
+    max-width: 145px;
+}
+
+.cat-image {
+    height: 189px;
 }
